# sdk

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  style.css
.github/actions/setup-dioxus/: action.yaml
.github/actions/setup-node/: action.yaml
.github/workflows/: ci.yaml
src/: auth_client.rs  config.rs  constants.rs  data_storage.rs  hooks.rs  icons.rs  lib.rs  serv_fn.rs  test_utils.rs
src/app/: data_storage.rs  hooks.rs  icons.rs  mod.rs  request.rs  serv_fn.rs  server.rs  storage.rs
src/app/components/: app_provider.rs  form.rs  logo.rs  mod.rs  modal.rs
src/app/icons/: mini.rs  mod.rs  outline.rs  solid.rs
src/components/: form.rs  mod.rs
src/core/: auth_client.rs  config.rs  identity_client.rs  mod.rs
src/monitor/: mod.rs
