[package]
name = "sdk"
version = "0.0.0-alpha.19"
edition = "2024"
authors = ["Javier E. <jaedns@gmail.com>"]
repository = "https://github.com/mangocubed/sdk"

[dependencies]
anyhow = { version = "1.0", optional = true }
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.12", features = ["typed-header"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
dioxus = { version = "0.7", optional = true, features = [
    "fullstack",
    "router",
] }
dioxus-sdk = { version = "0.7", features = ["storage"], optional = true }
directories = { version = "6.0", optional = true }
fake = { version = "4.4", features = ["chrono"], optional = true }
figment = { version = "0.10", features = ["env", "toml"], optional = true }
headers = { version = "0.4", optional = true }
http = { version = "1.3", optional = true }
rand = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.48", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
url = { version = "2.5", optional = true }
uuid = { version = "1.18", features = ["serde"], optional = true }
validator = { version = "0.20", optional = true }
web-sys = { version = "0.3", features = ["Storage"], optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.48", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-net = { version = "0.6", features = ["json"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false, optional = true }

[features]
default = []
core = [
    "dep:anyhow",
    "dep:chrono",
    "dep:figment",
    "dep:rand",
    "dep:url",
    "dep:uuid",
    "dep:validator",
]
app = ["dep:dioxus", "dep:dioxus-sdk", "dep:http", "dep:url", "dep:validator"]
web = ["dep:web-sys", "dioxus/web", "app"]
desktop = ["dep:directories", "dioxus/desktop", "app"]
mobile = ["dioxus/mobile", "app"]
server = ["dep:axum", "dep:headers", "dep:tokio", "dep:tower-http", "core"]
auth-client = []
build = []
test-utils = ["dep:fake", "uuid/v4", "auth-client", "core"]
